<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deactivate_color">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/half_round_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/chevron_left"
            android:onClick="onClickBack"
            android:text="Back"
            android:textColor="@color/color_do_not_see" />

        <TextView
            android:id="@+id/text_add_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/add_pay"
            android:textAlignment="center"
            android:textColor="@color/bottom_nav"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_add_expence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/namePayType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="Мекеме атауы"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:fontFamily="@font/open_sans_medium"
            android:hint="@string/pay_com_hint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textPaySumma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/pay_summa"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edSumma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="137dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:fontFamily="@font/open_sans_medium"
            android:hint="@string/pay_summa_hint"
            android:inputType="number|numberDecimal|numberSigned"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="211dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/pay_time"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/open_sans_medium"
            android:hint="@string/pay_time_hint"
            android:inputType="datetime|date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="315dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/pay_card"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinnerCards"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="414dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/pay_info"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edInfo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="439dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="start|top"
            android:hint="@string/pay_info_hint"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="552dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/button_rounded_fon_add_pay"
            android:fontFamily="@font/open_sans_semibold"
            android:onClick="onClickAddExpensive"
            android:text="@string/button_text"
            android:textColor="@color/bottom_nav"
            android:textSize="18sp" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>