<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain2023"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_background"
    tools:context=".fragments.CardFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/simple_while_half_rounded_back">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="270dp">

            <TextView
                android:id="@+id/textAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/information"
                android:textColor="@color/add_text_page"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textAddCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/add_your_card"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/nextNewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_rounded_fon_add_pay"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/card_add"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>

    <TextView
        android:id="@+id/textCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/card_page_text"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</RelativeLayout>