<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color_home_page">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/half_round_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="47dp"
            android:background="@drawable/chevron_left"
            android:onClick="onClickBack"
            android:text="Back"
            android:textColor="@color/color_do_not_see" />

        <TextView
            android:id="@+id/text_add_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/card_add_money"
            android:textAlignment="center"
            android:textColor="@color/bottom_nav"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/delete"
            android:text="Button"
            android:textColor="@color/color_do_not_see" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_add_expence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="Kaspi Bank"
            android:textAlignment="center"
            android:textColor="@color/add_text_page"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/card_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="₸ 1234.56"
            android:textAlignment="center"
            android:textColor="#222"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textTotalSumma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/add_cash_total"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edTotalCardAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="number|numberDecimal|numberSigned"
            android:paddingHorizontal="10dp"
            android:text="0.0"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textDateCardAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/add_cash_date"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edDateCardAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="253dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/open_sans_medium"
            android:hint="@string/pay_time_hint"
            android:inputType="datetime|date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textInfoCardAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="327dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/add_cash_info"
            android:textColor="@color/add_text_page"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edInfoCardAdd"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_cash_info_hint"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/add_text_page"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="470dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/button_rounded_fon_add_pay"
            android:fontFamily="@font/open_sans_semibold"
            android:onClick="onClickAddTotalToCard"
            android:text="@string/card_add_money"
            android:textColor="@color/bottom_nav"
            android:textSize="18sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>