<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.ProfileFragment">

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/rectangle_profile">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/profile_page_text"
            android:textAlignment="center"
            android:textColor="@color/bottom_nav"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Ережеп Бекарыс"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textGmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="bekaryserezep05@gmail.com"
            android:textAlignment="center"
            android:textColor="#438883"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/button_lang"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/imageLangIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/lang_icon" />

            <TextView
                android:id="@+id/textChooseLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/change_lang"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_choose_lang"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="166dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_file_deactivate_background"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spinner_lang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/edit_file_deactivate_background"
                android:paddingHorizontal="10dp" />

            <Button
                android:id="@+id/saveLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_rounded_fon_add_pay"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </FrameLayout>
    </FrameLayout>
</RelativeLayout>